# goit-pythonweb-hw-06

./: .env  .gitignore  alembic.ini  main.py  my_select.py  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: b489817fa21a_initial_schema.py
db/: db.py  models.py  seed.py
